--- a/src/stories/header.css
+++ b/src/stories/header.css
@@ -7,15 +7,10 @@
   font-family: 'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
-.storybook-header svg {
-  display: inline-block;
-  vertical-align: top;
-}
-
 .storybook-header h1 {
   display: inline-block;
   vertical-align: top;
-  margin: 6px 0 6px 10px;
+  margin: 6px 50px 6px 10px;
   font-weight: 700;
   font-size: 20px;
   line-height: 1;
